--- a/src/pages/portfolio/IceCube/style.css
+++ b/src/pages/portfolio/IceCube/style.css
@@ -130,13 +130,13 @@ section {
 
 .intro_sec .text,
 .intro_sec .h_bg-image {
-    width: 50%;
+    max-width: 50%;
 }
 
 @media (max-width:991.98px) {
     .intro_sec .text,
     .intro_sec .h_bg-image {
-        width: 100%;
+        max-width: 100%;
     }
 }
 
