--- a/src/pages/portfolio/IceCube/style.css
+++ b/src/pages/portfolio/IceCube/style.css
@@ -6,7 +6,7 @@ section {
     -o-transition: all .5s ease-in;
     transition: all .5s ease-in;
 }
-
+wwwwwwwwwwwww
 .who_am_I {
     font-family: Cinzel;
 }
@@ -45,13 +45,13 @@ section {
 }
 
 .intro_sec .text,
-.intro_sec .h_bg-image {
-    width: 50%;
+.intro_sec .h_bgg-image {
+    width: 100%;
 }
 
 @media (max-width:991.98px) {
     .intro_sec .text,
-    .intro_sec .h_bg-image {
+    .intro_sec .h_bgg-image {
         width: 100%;
     }
 }
@@ -91,11 +91,12 @@ section {
     font-weight: 700;
 }
 
-.intro_sec .h_bg-image {
+.intro_sec .h_bgg-image {
     background-size: cover;
     background-position: center;
-    min-height: 700px;
+    min-height: 600px;
     position: relative;
+    border-bottom: 50vh;
 }
 
 .ac_btn {
@@ -174,7 +175,7 @@ section {
     color: var(--primary-color)
 }
 
-.intro_sec .h_bg-image .block {
+.intro_sec .h_bgg-image .block {
     bottom: 50vh;
     max-width: 220px;
     padding: 30px;
@@ -193,42 +194,39 @@ section {
 }
 
 @media (max-width:991.98px) {
-    .intro_sec .h_bg-image {
+    .intro_sec .h_bgg-image {
         height: 600px;
         min-height: 75vh;
-        margin-bottom: 30px;
+        
     }
-    .intro_sec .h_bg-image .block {
+    .intro_sec .h_bgg-image .block {
         top: unset;
         bottom: 0;
         width: 100%;
-        margin: 0;
         left: 50%;
         transform: translate(-50%, 50%);
     }
 }
 
-.intro_sec .h_bg-image .block .wrap-icon {
+.intro_sec .h_bgg-image .block .wrap-icon {
     font-size: 40px;
     color: var(--text-color);
-    margin-bottom: 10px;
     display: block;
 }
 
-.intro_sec .h_bg-image .block h3 {
+.intro_sec .h_bgg-image .block h3 {
     font-size: 14px;
     color: var(--text-color);
     letter-spacing: .1rem;
     font-weight: 700;
-    margin-bottom: 15px;
 }
 
-.intro_sec .h_bg-image .block p {
+.intro_sec .h_bgg-image .block p {
     font-size: 14px;
     line-height: 1.3;
     color: var(--text-color)
 }
 
-.intro_sec .h_bg-image {
+.intro_sec .h_bgg-image {
     filter: saturate(1);
 }
