--- a/src/header/style.css
+++ b/src/header/style.css
@@ -27,7 +27,7 @@
     border: unset;
     background: var(--primary-color);
     font-size: 1.25rem;
-    font-family: Marcellus;
+    font-family: Roboto Slab;
     color: var(--text-color-2);
     line-height: 2;
     height: 50px;
@@ -180,7 +180,7 @@
     transition: color 250ms cubic-bezier(0, 0, 0.58, 1) 0s;
     padding: 4px 0px;
     text-decoration: none;
-    font-family: Marcellus;
+    font-family: Roboto Slab;
 }
 
 .the_menu .menu_item>a:hover {
@@ -195,7 +195,7 @@
 
 .menu_footer {
     bottom: 0;
-    font-family: Marcellus;
+    font-family: Roboto Slab;
     font-size: 14px;
     background: var(--primary-color);
 }
