--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -1,28 +1,28 @@
 .po_items_ho {
-    column-width: 15em;
-    -moz-column-width: 15em;
-    -webkit-column-width: 15em;
-    column-gap: 4rem;
-    -moz-column-gap: 4rem;
-    -webkit-column-gap: 4rem;
+    column-width: 12em;
+    -moz-column-width: 12em;
+    -webkit-column-width: 12em;
+    column-gap: 3rem;
+    -moz-column-gap: 3rem;
+    -webkit-column-gap: 3rem;
 }
 
 .po_item {
     display: inline-block;
     width: 100%;
-    text-align: center;
     margin: 0.5rem auto;
     position: relative;
-    background: var(--secondary-color);
-    padding: 6px;
-    border: 1px solid var(--secondary-color);
+    background-color:  white;
+    padding: 12px;
+    border-radius: 10px;
     transition: 0.3s ease;
-    font-size: 0;
-    min-height: 300px;
+    min-height:20             em;
+    max-height: 40em;
 }
 
 .po_item img {
     max-width: 100%;
+    border-radius: 8px;
 }
 
 .po_item .content {
@@ -33,6 +33,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background: var(--overlay-color);
+    border-radius: 10px;
     z-index: 1;
     display: flex;
     justify-content: center;
@@ -42,14 +43,13 @@
     width: 100%;
     transition: 0.3s ease-in-out;
     opacity: 0;
-    border: 1px solid black;
 }
 
 .po_item .content {
     opacity: 0;
     transition-delay: 1s;
     transition: 0.3s ease;
-    font-size: 20px;
+
 }
 
 .po_item:hover {
@@ -57,24 +57,30 @@
 }
 
 .po_item:hover .content {
-    height: calc(100% - 30px);
-    width: calc(100% - 30px);
+    height: calc(100%);
+    width: calc(100%);
     opacity: 1;
 }
 
 .po_item:hover .content {
     opacity: 1;
-    color: var(--secondary-color);
+    color: black;
 }
 
 .po_item .content a {
     background: var(--bg-color);
     border: solid 1px var(--text-color);
-    padding: 4px 8px;
     text-align: center;
     font-size: 1rem;
 }
 
 .po_item .content a:hover {
     text-decoration: none;
+}
+
+.po_item .Text {
+    opacity: 1;
+    color: black;
+    font-size: .85rem;
+    align-items: center;
 }
