--- a/src/pages/portfolio/Research/style.css
+++ b/src/pages/portfolio/Research/style.css
@@ -96,6 +96,8 @@ section {
     min-height: 600px;
     position: relative;
     border-bottom: 50vh;
+    border-radius: 10px;
+
 }
 
 .ac_btn {
@@ -229,3 +231,23 @@ section {
 .intro_sec .h_bgg-image {
     filter: saturate(1);
 }
+
+.end-img {
+    height: 20vh;
+    min-height: 10vh;  
+    margin-bottom: 30px;
+    border-radius: 10px;
+    display: block;
+    background-color: #C5F4FF;
+}
+
+.intro_sec .img-last {
+    background-size: cover;
+    background-position: center;
+    min-height: 50vh;
+    position: relative;
+    border-radius: 10px;
+    width: 100%;
+
+}
+
