--- a/src/pages/portfolio/these/style.css
+++ b/src/pages/portfolio/these/style.css
@@ -226,9 +226,22 @@ section {
 .intro_sec .h_bg-image .block p {
     font-size: 14px;
     line-height: 1.3;
-    color: var(--text-color)
+    color: var(--text-color);
 }
 
 .intro_sec .h_bg-image {
     filter: saturate(1);
 }
+.intro .txt{
+    color: black;
+}
+
+.end-img {
+    height: 20vh;
+    min-height: 10vh;  
+    margin-bottom: 30px;
+    border-radius: 10px;
+    display: block;
+    background-color: #C5F4FF;
+}
+
